<resources>
    <string name="app_name">Trabalho Android</string>

    <string name="createEventActivityLabel">Create Event</string>
    <string name="searchEventsActivityLabel">Search Events</string>
    <string name="eventDescriptionActivityLabel">Event Details</string>
    <string name="myEventsActivityLabel">My Events</string>
    <string name="title_activity_settings">Settings</string>
    <string name="createAccountActivityLabel">Create Account</string>
    <string name="resetPasswordActivityLabel">Reset Password</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>

    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="km_from">km from:</string>
    <string name="btn_search_event">Search Event</string>
    <string name="invite_friend">Invite a Friend</string>
    <string name="these_people_are_participating">These people are participating:</string>
    <string name="tabUpcomingEvents">Upcoming Events</string>
    <string name="tabRecentEvents">Recent Events</string>
    <string name="show_route">Show Route</string>
    <string name="participate_in_this_event">Participate in this Event</string>

    <!-- Strings for the enumeration TypeEvent -->
    <string name="type_event_bike">Bike</string>
    <string name="type_event_run">Run</string>
    <string name="type_event_walk">Walk</string>
    <string name="type_event_hike">Hike</string>
    <string name="introduce_login">Introduce chosen login</string>
    <string name="introduce_name">Introduce chosen name</string>
    <string name="introduce_mail">Introduce chosen mail</string>
    <string name="introduce_mail_reset_password">Introduce your mail</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="choose_new_password">Choose a new password</string>
    <string name="choose_new_mail">Choose a new mail</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="reset_password">Reset password</string>
    <string name="create_account">Create account</string>
    <string name="mail">Mail</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="etUserDescription">Add more information about yourself…</string>
    <string name="tvUserDescription">Description</string>
    <string name="tvUserBirth">Day of Birth</string>
    <string name="UserDescriptionActivityLabel">Account</string>
    <string name="edit_account">Edit account</string>
    <string name="add_photo">Add photo</string>
    <string name="add_friends">Add friends</string>
    <string name="my_friends">My friends</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="password_update">Password changed successfully</string>
    <string name="mail_update">Mail changed successfully</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="title_activity_maps">Map</string>

    <string name="normal_map">Normal map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_end">Choose end</string>
    <string name="choose_start">Choose start</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="distance_with_value">"Distance: %1$s"</string>
    <string name="duration_with_value">"Duration: %1$s"</string>
    <string name="tv_repeat_password">Repeat password</string>
    <string name="my_account">My account</string>
    <string name="my_events">My events</string>

    <string name="error_empty_fields">Please fill in all fields</string>
    <string name="error_password_not_match">Passwords do not match</string>
    <string name="error_connection">There was a small problem. Check your internet connection.</string>
    <string name="error_mail_already_registered">Mail already registered</string>
    <string name="registration_completed">Registration completed!</string>
    <string name="error_incorrect_data_login">Incorrect data</string>
    <string name="password_changed">Password successfully changed! Check your mail.</string>
    <string name="error_user_not_found">Account not found.</string>

    <string name="facebook_error">Error connecting to facebook</string>
    <string name="facebook_app_id" translatable="false">540733856113131</string>

    <string name="anderson_lemos" translatable="false">Anderson Lemos</string>
    <string name="ellinoora_laaksonen" translatable="false">Ellinoora Laaksonen</string>
    <string name="magdalena_popinska" translatable="false">Magdalena Popinska</string>
    <string name="markus_degenhardt" translatable="false">Markus Degenhardt</string>
    <string name="title_activity_credit">Credits</string>
    <string name="log_out">Log out</string>
    <string name="credits">Credits</string>
    <string name="etCreateNameHint">Change your name</string>
    <string name="e_mail">E-mail</string>
    <string name="change_your_e_mail">Change your e-mail</string>
    <string name="change_your_password">Change your password</string>
    <string name="save">Save</string>
    <string name="search_for_a_friend">Search for a friend...</string>
    <string name="search">Search</string>
    <string name="et_event_description_hint">Add an event description...</string>
    <string name="secret_event">Secret Event</string>
    <string name="create_event">Create Event</string>
    <string name="add_an_event_description">Add an event description...</string>
    <string name="dash" translatable="false">-</string>
    <string name="finish">Finish</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="choose_an_address">Choose an address</string>
    <string name="update_account_confirmed">Successful changes!</string>
    <string name="language">Language</string>
    <string name="language_label">Language:</string>
    <string name="tabEventInvitations">Invitations</string>
    <string name="search_field_empty">Insert name or mail</string>
    <string name="error_incorrect_search_input">No users found</string>
    <string name="no_results_found">No users matched your search</string>
    <string name="added_as_friend">added as friend</string>
    <string name="removed_of_friends">removed of your friends</string>
    <string name="date">DATE: %s</string>
    <string name="event_created_successfully">Event created successfully!</string>
    <string name="error_creating_event">Error creating the event!</string>
    <string name="time">TIME: %s</string>
    <string name="error_searching_event">Error searching event!</string>
    <string name="event_searched">Event searched!</string>
    <string name="already_friend">You are already friends with</string>
    <string name="google_play_not_available">Google Play Services is not available.</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="map_fragment_null">Error - Map Fragment was null!</string>
    <string name="search_for_a_user">Search for a user</string>
    <string name="already_invited">is already invited</string>
    <string name="invited">invited</string>
    <string name="no_location_detected">No location detected</string>
    <string name="add_friend">Add friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="do_you_really_want_to_add">"Do you really want to add "</string>
    <string name="do_you_really_want_to_remove">"Do you really want to remove "</string>
    <string name="ad_your_friend">" as your friend?"</string>
    <string name="of_your_friends">" of your friends?"</string>
    <string name="do_you_really_want_to_invite">Do you really want to invite</string>
    <string name="invite">Invite</string>

    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="invited_friend">Invited friend</string>

    <string name="already_participating">You are already participating</string>
    <string name="participated">You participated in the event</string>
    <string name="creating_event">Creating event</string>
</resources>
