<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_action_edit_account"
        android:title="@string/edit_account"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuMyFriends"
        android:icon="@drawable/ic_action_view_friends"
        android:title="@string/my_friends"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuMyEvents"
        android:icon="@drawable/ic_action_my_events"
        android:title="@string/my_events"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuAddFriends"
        android:icon="@drawable/ic_action_add_friends"
        android:title="@string/add_friends"
        android:visible="true"
        app:showAsAction="ifRoom"/>
</menu>