<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="com.neto.deolino.trabalhoandroid.activies.AccountSettingsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/tvCreateName"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/tvSettings"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/etCreateNameHint"
        android:ems="10"
        android:id="@+id/etCreateName"
        android:layout_below="@+id/tvCreateName"
        android:layout_centerHorizontal="true"
        style="@style/etSettings"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/e_mail"
        android:id="@+id/tvCreateMail"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/etCreateName"
        android:layout_centerHorizontal="true"
        style="@style/tvSettings"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/change_your_e_mail"
        android:ems="10"
        android:id="@+id/etCreateMail"
        android:layout_below="@+id/tvCreateMail"
        android:layout_centerHorizontal="true"
        style="@style/etSettings"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/tvCreatePassword"
        android:layout_below="@+id/etCreateMail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        style="@style/tvSettings"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/change_your_password"
        android:ems="10"
        android:id="@+id/etCreatePassword"
        android:layout_below="@+id/tvCreatePassword"
        android:layout_centerHorizontal="true"
        style="@style/etSettings"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_repeat_password"
        android:id="@+id/tvRepeatPassword"
        android:layout_below="@+id/etCreatePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        style="@style/tvSettings"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:ems="10"
        android:id="@+id/etRepeatPassword"
        android:layout_below="@+id/tvRepeatPassword"
        android:layout_centerHorizontal="true"
        style="@style/etSettings"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btn_save_settings"
        style="@style/button"
        android:layout_below="@+id/etRepeatPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:id="@+id/btnLogout"
        style="@style/noBorderButton"
        android:layout_below="@+id/btn_save_settings"
        android:layout_centerHorizontal="true" />

</RelativeLayout>