<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mail"
            android:id="@+id/tvCreateMail"
            android:layout_marginTop="26dp"
            style="@style/tvSettings"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/introduce_mail"
            android:ems="10"
            android:id="@+id/etCreateMail"
            android:textAlignment="center"
            style="@style/etSettings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/tvCreateName"
            android:layout_marginTop="26dp"
            style="@style/tvSettings"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/introduce_name"
            android:ems="10"
            android:id="@+id/etCreateName"
            android:textAlignment="center"
            style="@style/etSettings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:id="@+id/tvCreatePassword"
            android:layout_marginTop="29dp"
            style="@style/tvSettings"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:ems="10"
            android:id="@+id/etCreatePassword"
            android:textAlignment="center"
            style="@style/etSettings"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_repeat_password"
            android:id="@+id/tvRepeatPassword"
            android:layout_marginTop="29dp"
            style="@style/tvSettings"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:ems="10"
            android:id="@+id/etRepeatPassword"
            android:textAlignment="center"
            style="@style/etSettings"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:id="@+id/button"
            style="@style/button"
            android:onClick="createAccount"
            android:layout_marginBottom="63dp" />

    </LinearLayout>

</ScrollView>