<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mNormalMap"
        android:title="@string/normal_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mTerrainMap"
        android:title="@string/terrain_map"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mSatelliteMap"
        android:title="@string/satellite_map"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_my_location"
        android:title="Minha localização"
        android:icon="@android:drawable/ic_menu_mylocation"
        app:showAsAction="always" />


    <item
        android:id="@+id/normal"
        android:title="@string/normal_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/terrain"
        android:title="@string/terrain_map"
        android:icon="@android:drawable/ic_menu_compass"
        app:showAsAction="never"/>
    <item
        android:id="@+id/satellite"
        android:title="@string/satellite_map"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="never"/>

    <item
        android:id="@+id/hybrid"
        android:title="Híbrido"
        android:icon="@android:drawable/ic_menu_mylocation"
        app:showAsAction="always" />
</menu>