<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activies.CreateEventActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:baselineAligned="false"
        android:id="@+id/rgEventType">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbBike"
            android:drawableRight="@drawable/bike_small"
            android:layout_marginRight="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbHike"
            android:drawableRight="@drawable/hike_small"
            android:layout_marginRight="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbRun"
            android:drawableRight="@drawable/running_small"
            android:checked="false" />
    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_date"
            android:id="@+id/btnEventDate"
            android:onClick="showDatePickerDialog"
            style="@style/date_time_button" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_time"
            android:id="@+id/btnEventTime"
            android:onClick="showTimePickerDialog"
            style="@style/date_time_button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryLight1"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/start"
                    style="@style/event_startEnd" />


                <TextView
                    android:id="@+id/tvEventStart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/choose_start"
                    style="@style/event_startEnd"
                    android:onClick="selectLocationButtonPressed" />

            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:id="@+id/btnStartLocation"
            android:src="@drawable/map_marker"
            android:scaleType="centerInside"
            android:background="@color/colorPrimaryLight1"
            android:layout_margin="2dp"
            android:onClick="selectLocationButtonPressed"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryLight1"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:baselineAligned="false">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/end"
                    style="@style/event_startEnd" />


                <TextView
                    android:id="@+id/tvEventEnd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/choose_end"
                    style="@style/event_startEnd"
                    android:onClick="selectLocationButtonPressed" />

            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:id="@+id/btnEndLocation"
            android:src="@drawable/map_marker"
            android:scaleType="centerInside"
            android:background="@color/colorPrimaryLight1"
            android:layout_margin="2dp"
            android:onClick="selectLocationButtonPressed" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/etEventDescription"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"
        android:hint="@string/et_event_description_hint" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/secret_event"
        android:id="@+id/cbSecretEvent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/create_event"
        android:id="@+id/btnCreateEvent"
        android:layout_weight="1"
        android:onClick="createEventButtonPressed"
        style="@style/button" />

</LinearLayout>